--- a/templates/vhost/vhost_location_stub_status.erb
+++ b/templates/vhost/vhost_location_stub_status.erb
@@ -1,9 +1,5 @@
   location <%= location %> {
-<% if @location_cfg_prepend -%><% location_cfg_prepend.each do |key,value| -%>
-    <%= key %> <%= value %>;
-<% end -%><% end -%>
+<%= scope.function_template(['nginx/vhost/_location_cfg_prepend.erb']) -%>
     stub_status on;
-<% if @location_cfg_append -%><% location_cfg_append.each do |key,value| -%>
-    <%= key %> <%= value %>;
-<% end -%><% end -%>
+<%= scope.function_template(['nginx/vhost/_location_cfg_append.erb']) -%>
   }
