--- a/templates/conf.d/nginx.conf.erb
+++ b/templates/conf.d/nginx.conf.erb
@@ -1,33 +1,24 @@
-user <%= scope.lookupvar('nginx::config::nx_daemon_user') %>;
-worker_processes <%= worker_processes %>;
-
+user <%= scope.lookupvar('nginx::params::nx_daemon_user') %>;
+worker_processes <%= nx_worker_processes %>;
 error_log  <%= scope.lookupvar('nginx::params::nx_logdir')%>/error.log;
 pid        <%= scope.lookupvar('nginx::params::nx_pid')%>;
-
 events {
-  worker_connections <%= worker_connections %>;
-  <% if scope.lookupvar('nginx::params::nx_multi_accept') == 'on' %>multi_accept on;<% end %>
+  worker_connections <%= nx_worker_connections %>;
+  <%- if scope.lookupvar('nginx::params::nx_multi_accept') == 'on' -%>multi_accept on;<%- end -%>
 }
-
 http {
-  include       /etc/nginx/mime.types;
+  include      <%= scope.lookupvar('::nginx::params::nx_conf_dir') %>/mime.types;
   default_type  application/octet-stream;
-
-  access_log  <%= scope.lookupvar('nginx::params::nx_logdir')%>/access.log;
-
-  sendfile    <%= scope.lookupvar('nginx::params::nx_sendfile')%>;
-
-  <% if scope.lookupvar('nginx::params::nx_tcp_nopush') == 'on' %>
+  access_log   <%= scope.lookupvar('nginx::params::nx_logdir')%>/access.log;
+  sendfile     <%= scope.lookupvar('nginx::params::nx_sendfile')%>;
+<% if scope.lookupvar('nginx::params::nx_tcp_nopush') == 'on' -%>
   tcp_nopush  on;
-  <% end %>
-
+<% end -%>
   keepalive_timeout  <%= scope.lookupvar('nginx::params::nx_keepalive_timeout')%>;
   tcp_nodelay        <%= scope.lookupvar('nginx::params::nx_tcp_nodelay')%>;
-
-  <% if scope.lookupvar('nginx::params::nx_gzip') == 'on' %> 
+<% if scope.lookupvar('nginx::params::nx_gzip') == 'on' -%> 
   gzip         on;
   gzip_disable "MSIE [1-6]\.(?!.*SV1)";
-  <% end %>
-
-  include /etc/nginx/conf.d/*.conf;
+<% end -%>
+  include <%= scope.lookupvar('::nginx::params::nx_conf_dir') %>/conf.d/*.conf;
 }
