--- a/templates/vhost/vhost_footer.erb
+++ b/templates/vhost/vhost_footer.erb
@@ -1,9 +1,9 @@
 }
 
-<% if rewrite_www_to_non_www %>
+<% if rewrite_www_to_non_www -%>
 server {
   listen                <%= listen_ip %>;
-  server_name           www.<%= name.gsub(/^www\./, '') %>;
-  rewrite               ^ http://<%= name.gsub(/^www\./, '') %>$uri permanent;
+  server_name           www.<%= vhost.gsub(/^www\./, '') %>;
+  rewrite               ^ http://<%= vhost.gsub(/^www\./, '') %>$uri permanent;
 }
-<% end %>
+<% end -%>
