--- a/templates/vhost/vhost_location_alias.erb
+++ b/templates/vhost/vhost_location_alias.erb
@@ -1,9 +1,5 @@
   location <%= location %> {
-<% if @location_cfg_prepend -%><% location_cfg_prepend.each do |key,value| -%>
-    <%= key %> <%= value %>;
-<% end -%><% end -%>
+<%= scope.function_template(['nginx/vhost/_location_cfg_prepend.erb']) -%>
     alias  <%= location_alias %>;
-<% if @location_cfg_append -%><% location_cfg_append.each do |key,value| -%>
-    <%= key %> <%= value %>;
-<% end -%><% end -%>
+<%= scope.function_template(['nginx/vhost/_location_cfg_append.erb']) -%>
   }
