--- a/templates/vhost/vhost_location_directory.erb
+++ b/templates/vhost/vhost_location_directory.erb
@@ -1,13 +1,13 @@
   location <%= location %> {
-<% if @location_cfg_prepend -%><% location_cfg_prepend.each do |key,value| -%>
-    <%= key %> <%= value %>;
-<% end -%><% end -%>
+<%= scope.function_template(['nginx/vhost/_location_cfg_prepend.erb']) -%>
+<% if www_root.to_s != "undef" then -%>
     root  <%= www_root %>;
-    <% if has_variable?("try_files") then %>
-    try_files <% try_files.each do |try| -%> <%= try %> <% end -%>;
-    <% end %>
-    index <% index_files.each do |i| %> <%= i %> <% end %>; 
-<% if @location_cfg_append -%><% location_cfg_append.each do |key,value| -%>
-    <%= key %> <%= value %>;
-<% end -%><% end -%>
+<% end -%>
+<% if try_files.is_a?(Array) and try_files.count > 0 then -%>
+    try_files <% try_files.each do |try| -%><%= try %> <% end -%>;
+<% end -%>
+<% if index_files.is_a?(Array) and index_files.count > 0 -%>
+    index <% index_files.each do |i| -%><%= i -%> <% end -%>;
+<% end -%>
+<%= scope.function_template(['nginx/vhost/_location_cfg_append.erb']) -%>
   }
